@@ -15,7 +15,7 @@ package|;
 end_package
 
 begin_comment
-comment|/**  * Copyright 2004 The Apache Software Foundation  *  * Licensed under the Apache License, Version 2.0 (the "License");  * you may not use this file except in compliance with the License.  * You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
+comment|/**  * Copyright 2006 The Apache Software Foundation  *  * Licensed under the Apache License, Version 2.0 (the "License");  * you may not use this file except in compliance with the License.  * You may obtain a copy of the License at  *  *     http://www.apache.org/licenses/LICENSE-2.0  *  * Unless required by applicable law or agreed to in writing, software  * distributed under the License is distributed on an "AS IS" BASIS,  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.  * See the License for the specific language governing permissions and  * limitations under the License.  */
 end_comment
 
 begin_import
@@ -187,6 +187,11 @@ operator|.
 name|getValue
 argument_list|()
 expr_stmt|;
+name|doc
+operator|=
+operator|-
+literal|1
+expr_stmt|;
 block|}
 DECL|method|next
 specifier|public
@@ -213,24 +218,105 @@ operator|=
 literal|false
 expr_stmt|;
 block|}
+return|return
+name|setFreqCurrentDoc
+argument_list|()
+return|;
+block|}
+DECL|method|skipTo
+specifier|public
+name|boolean
+name|skipTo
+parameter_list|(
+name|int
+name|target
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+if|if
+condition|(
+name|firstTime
+condition|)
+block|{
+name|more
+operator|=
+name|spans
+operator|.
+name|skipTo
+argument_list|(
+name|target
+argument_list|)
+expr_stmt|;
+name|firstTime
+operator|=
+literal|false
+expr_stmt|;
+block|}
 if|if
 condition|(
 operator|!
 name|more
 condition|)
+block|{
 return|return
 literal|false
 return|;
-name|freq
+block|}
+if|if
+condition|(
+name|spans
+operator|.
+name|doc
+argument_list|()
+operator|<
+name|target
+condition|)
+block|{
+comment|// setFreqCurrentDoc() leaves spans.doc() ahead
+name|more
 operator|=
-literal|0.0f
+name|spans
+operator|.
+name|skipTo
+argument_list|(
+name|target
+argument_list|)
 expr_stmt|;
+block|}
+return|return
+name|setFreqCurrentDoc
+argument_list|()
+return|;
+block|}
+DECL|method|setFreqCurrentDoc
+specifier|private
+name|boolean
+name|setFreqCurrentDoc
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+if|if
+condition|(
+operator|!
+name|more
+condition|)
+block|{
+return|return
+literal|false
+return|;
+block|}
 name|doc
 operator|=
 name|spans
 operator|.
 name|doc
 argument_list|()
+expr_stmt|;
+name|freq
+operator|=
+literal|0.0f
 expr_stmt|;
 while|while
 condition|(
@@ -278,9 +364,11 @@ block|}
 return|return
 name|more
 operator|||
+operator|(
 name|freq
 operator|!=
-literal|0.0f
+literal|0
+operator|)
 return|;
 block|}
 DECL|method|doc
@@ -329,91 +417,6 @@ index|]
 argument_list|)
 return|;
 comment|// normalize
-block|}
-DECL|method|skipTo
-specifier|public
-name|boolean
-name|skipTo
-parameter_list|(
-name|int
-name|target
-parameter_list|)
-throws|throws
-name|IOException
-block|{
-name|more
-operator|=
-name|spans
-operator|.
-name|skipTo
-argument_list|(
-name|target
-argument_list|)
-expr_stmt|;
-if|if
-condition|(
-operator|!
-name|more
-condition|)
-return|return
-literal|false
-return|;
-name|freq
-operator|=
-literal|0.0f
-expr_stmt|;
-name|doc
-operator|=
-name|spans
-operator|.
-name|doc
-argument_list|()
-expr_stmt|;
-while|while
-condition|(
-name|more
-operator|&&
-name|spans
-operator|.
-name|doc
-argument_list|()
-operator|==
-name|target
-condition|)
-block|{
-name|freq
-operator|+=
-name|getSimilarity
-argument_list|()
-operator|.
-name|sloppyFreq
-argument_list|(
-name|spans
-operator|.
-name|end
-argument_list|()
-operator|-
-name|spans
-operator|.
-name|start
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|more
-operator|=
-name|spans
-operator|.
-name|next
-argument_list|()
-expr_stmt|;
-block|}
-return|return
-name|more
-operator|||
-name|freq
-operator|!=
-literal|0.0f
-return|;
 block|}
 DECL|method|explain
 specifier|public
