@@ -120,63 +120,7 @@ name|lucene
 operator|.
 name|search
 operator|.
-name|BooleanClause
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|search
-operator|.
-name|BooleanQuery
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|search
-operator|.
-name|Hits
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|search
-operator|.
-name|IndexSearcher
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
-name|search
-operator|.
-name|Query
+name|*
 import|;
 end_import
 
@@ -227,6 +171,11 @@ name|Directory
 name|mDirectory
 decl_stmt|;
 empty_stmt|;
+DECL|field|searcher
+specifier|protected
+name|IndexSearcher
+name|searcher
+decl_stmt|;
 comment|// field names in the index
 DECL|field|FIELD_ID
 specifier|private
@@ -324,6 +273,14 @@ operator|.
 name|close
 argument_list|()
 expr_stmt|;
+name|searcher
+operator|=
+operator|new
+name|IndexSearcher
+argument_list|(
+name|mDirectory
+argument_list|)
+expr_stmt|;
 block|}
 DECL|method|tearDown
 specifier|protected
@@ -333,6 +290,11 @@ parameter_list|()
 throws|throws
 name|Exception
 block|{
+name|searcher
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
 name|mDirectory
 operator|.
 name|close
@@ -441,6 +403,8 @@ name|IOException
 block|{
 name|doTestBooleanQueryWithSpanQueries
 argument_list|(
+name|searcher
+argument_list|,
 literal|0.3884282f
 argument_list|)
 expr_stmt|;
@@ -451,6 +415,9 @@ specifier|protected
 name|void
 name|doTestBooleanQueryWithSpanQueries
 parameter_list|(
+name|IndexSearcher
+name|s
+parameter_list|,
 specifier|final
 name|float
 name|expectedScore
@@ -509,15 +476,6 @@ name|MUST
 argument_list|)
 expr_stmt|;
 specifier|final
-name|Hits
-name|hits
-init|=
-name|executeQuery
-argument_list|(
-name|query
-argument_list|)
-decl_stmt|;
-specifier|final
 name|String
 index|[]
 name|expectedIds
@@ -555,7 +513,9 @@ block|}
 decl_stmt|;
 name|assertHits
 argument_list|(
-name|hits
+name|s
+argument_list|,
+name|query
 argument_list|,
 literal|"two span queries"
 argument_list|,
@@ -565,58 +525,18 @@ name|expectedScores
 argument_list|)
 expr_stmt|;
 block|}
-comment|/**      * Executes the query and throws an assertion if the results don't match the      * expectedHits.      *      * @param query the query to execute      * @throws IOException      */
-DECL|method|executeQuery
-specifier|protected
-name|Hits
-name|executeQuery
-parameter_list|(
-specifier|final
-name|Query
-name|query
-parameter_list|)
-throws|throws
-name|IOException
-block|{
-specifier|final
-name|IndexSearcher
-name|searcher
-init|=
-operator|new
-name|IndexSearcher
-argument_list|(
-name|mDirectory
-argument_list|)
-decl_stmt|;
-specifier|final
-name|Hits
-name|hits
-init|=
-name|searcher
-operator|.
-name|search
-argument_list|(
-name|query
-argument_list|)
-decl_stmt|;
-name|searcher
-operator|.
-name|close
-argument_list|()
-expr_stmt|;
-return|return
-name|hits
-return|;
-block|}
-comment|/**      * Checks to see if the hits are what we expected.      *      * @param hits the search results      * @param description the description of the search      * @param expectedIds the expected document ids of the hits      * @param expectedScores the expected scores of the hits      *      * @throws IOException      */
+comment|/**      * Checks to see if the hits are what we expected.      *      * @param query the query to execute      * @param description the description of the search      * @param expectedIds the expected document ids of the hits      * @param expectedScores the expected scores of the hits      *      * @throws IOException      */
 DECL|method|assertHits
 specifier|protected
+specifier|static
 name|void
 name|assertHits
 parameter_list|(
-specifier|final
-name|Hits
-name|hits
+name|Searcher
+name|s
+parameter_list|,
+name|Query
+name|query
 parameter_list|,
 specifier|final
 name|String
@@ -635,8 +555,29 @@ parameter_list|)
 throws|throws
 name|IOException
 block|{
-comment|// display the hits
-comment|/*System.out.println(hits.length() + " hits for search: \"" + description + '\"');         for (int i = 0; i< hits.length(); i++) {             System.out.println("  " + FIELD_ID + ':' + hits.doc(i).get(FIELD_ID) + " (score:" + hits.score(i) + ')');         }*/
+specifier|final
+name|float
+name|tolerance
+init|=
+literal|1e-5f
+decl_stmt|;
+comment|// Hits hits = searcher.search(query);
+comment|// hits normalizes and throws things off if one score is greater than 1.0
+name|TopDocs
+name|topdocs
+init|=
+name|s
+operator|.
+name|search
+argument_list|(
+name|query
+argument_list|,
+literal|null
+argument_list|,
+literal|10000
+argument_list|)
+decl_stmt|;
+comment|/*****         // display the hits         System.out.println(hits.length() + " hits for search: \"" + description + '\"');         for (int i = 0; i< hits.length(); i++) {             System.out.println("  " + FIELD_ID + ':' + hits.doc(i).get(FIELD_ID) + " (score:" + hits.score(i) + ')');         }         *****/
 comment|// did we get the hits we expected
 name|assertEquals
 argument_list|(
@@ -644,10 +585,9 @@ name|expectedIds
 operator|.
 name|length
 argument_list|,
-name|hits
+name|topdocs
 operator|.
-name|length
-argument_list|()
+name|totalHits
 argument_list|)
 expr_stmt|;
 for|for
@@ -659,38 +599,125 @@ literal|0
 init|;
 name|i
 operator|<
-name|hits
+name|topdocs
 operator|.
-name|length
-argument_list|()
+name|totalHits
 condition|;
 name|i
 operator|++
 control|)
 block|{
-name|assertTrue
+comment|//System.out.println(i + " exp: " + expectedIds[i]);
+comment|//System.out.println(i + " field: " + hits.doc(i).get(FIELD_ID));
+name|int
+name|id
+init|=
+name|topdocs
+operator|.
+name|scoreDocs
+index|[
+name|i
+index|]
+operator|.
+name|doc
+decl_stmt|;
+name|float
+name|score
+init|=
+name|topdocs
+operator|.
+name|scoreDocs
+index|[
+name|i
+index|]
+operator|.
+name|score
+decl_stmt|;
+name|Document
+name|doc
+init|=
+name|s
+operator|.
+name|doc
+argument_list|(
+name|id
+argument_list|)
+decl_stmt|;
+name|assertEquals
 argument_list|(
 name|expectedIds
 index|[
 name|i
 index|]
-operator|.
-name|equals
-argument_list|(
-name|hits
-operator|.
+argument_list|,
 name|doc
-argument_list|(
-name|i
-argument_list|)
 operator|.
 name|get
 argument_list|(
 name|FIELD_ID
 argument_list|)
 argument_list|)
+expr_stmt|;
+name|boolean
+name|scoreEq
+init|=
+name|Math
+operator|.
+name|abs
+argument_list|(
+name|expectedScores
+index|[
+name|i
+index|]
+operator|-
+name|score
+argument_list|)
+operator|<
+name|tolerance
+decl_stmt|;
+if|if
+condition|(
+operator|!
+name|scoreEq
+condition|)
+block|{
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+name|i
+operator|+
+literal|" warning, expected score: "
+operator|+
+name|expectedScores
+index|[
+name|i
+index|]
+operator|+
+literal|", actual "
+operator|+
+name|score
 argument_list|)
 expr_stmt|;
+name|System
+operator|.
+name|out
+operator|.
+name|println
+argument_list|(
+name|s
+operator|.
+name|explain
+argument_list|(
+name|query
+argument_list|,
+name|id
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
 name|assertEquals
 argument_list|(
 name|expectedScores
@@ -698,14 +725,28 @@ index|[
 name|i
 index|]
 argument_list|,
-name|hits
-operator|.
 name|score
-argument_list|(
-name|i
-argument_list|)
 argument_list|,
-literal|0
+name|tolerance
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|s
+operator|.
+name|explain
+argument_list|(
+name|query
+argument_list|,
+name|id
+argument_list|)
+operator|.
+name|getValue
+argument_list|()
+argument_list|,
+name|score
+argument_list|,
+name|tolerance
 argument_list|)
 expr_stmt|;
 block|}
